hphp/hack/test/typecheck/fc_enum_non_arraykey_constraint.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

enum Enum: string as ?string {
  VALUE = 'value';
}
